implement extract data method